# AIcrapBot

./: README.md  pyproject.toml
src/ai_crapbot/: discordbot.py  discordimgbot.py  imagebot.py  main.py
