[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_crapbot"
version = "0.0.1"
authors = [
  { name="Travis Malcuit", email="tbm48813@gmail.com" },
]
description = "A little project for a AI Bot"
readme = "README.md"
requires-python = ">=3.9.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tbm48813/AIcrapBot"